koha-tmpl/opac-tmpl/prog/en/css/opac.css
/* ... */
#opac-main-search form {
	display : inline;
	padding-right : 1em;
}

#opac-main-search label {
	color : #FFFFCC;
	font-weight : bold;
	margin : .2em .3em 0 0;
}


#search-facets ul {
	margin : 0;
	padding : .3em;
}

#search-facets {
	border : 1px solid #e8e8e8;
}

#search-facets h4 {
	background-color : #EEE;
	border-bottom : 1px solid #e8e8e8;
	font-size : 90%;
	margin : 0;
	padding : .7em .2em;
	text-align : center;
}

#search-facets ul li {
	font-weight : bold;
	list-style-type : none;
}

#search-facets li li {
	font-weight : normal;
	font-size : 85%;
	margin-bottom : 2px;
	padding : .1em .2em;
}

#search-facets li li a {
	font-weight : normal;
}

#search-facets li.showmore a {
	font-weight : bold;
	text-indent : 1em;
}

.suggestion {
	background-color : #EEEEEB;
	border : 1px solid #DDDED3;
	margin : 10px auto;
	padding : 4px;
	width : 35%;
}

#facets ul {
	margin : 0;
	padding : 0;
}

#facets ul li {
	font-weight : bold;
	text-align : left;
	list-style : none;
}

#facets ul ul li {
	border : 0;
	font-size : 85%;
	font-weight : normal;
	padding : 2px;
	text-align : left;
}

#facets ul ul li a {
	font-weight : normal;
	text-decoration : underline;
}

#facets h4 {
	font-size : 93%;
	padding:3px;
	text-align:center;
	background-color:#E7E7CA;
	line-height:1.8em;
	margin-left:-1px;
	margin-right:-1px;
	margin-top:-1px;
}

#breadcrumbs {
	padding : .7em;
}

p {
	margin: .7em 0;
}

strong {
	font-weight : bold;
}

em {
	font-style : italic;
}


table#marc,
table#marc td,
table#marc th {
	background-color : transparent;
	border : 0;
}

table#marc p span.label {
	font-weight : bold;
}

table#marc p,
table#marc ul {
	padding-bottom: .6em;
}

table#items,
table#items td
table#items th {
	border-width : 1px solid #EEE;
	font-size : 90%;
}


table#marc div.results_summary {
	clear :  left;
}
table#marc div.results_summary ul {
	display : inline;
	float :  none;
	clear :  none;
	margin: 0;
	padding: 0;
	list-style : none;
}

table#marc div.results_summary ul li {
	display : inline;
}

#basketcount {
	display : inline;
}

#bookcover {
	float : left;
	margin : 0;
	padding : 0;
}

#bookcover img {
	margin : 0 1em 1em 0;	
}

fieldset.brief {
	border : 1px solid #E8E8E8;
}

fieldset.brief legend {
	font-weight : bold;
	font-size : 100%;
}

fieldset.brief label {
	display : block;
	padding : .3em 0;
}

fieldset.brief input+input {
	margin-top : 3px;
}

fieldset.brief input, fieldset.brief textarea, fieldset.brief select {	
	background-color: #F3F3F3;
	border-top : 1px solid #979797;
	border-left : 1px solid #979797;
	border-right : 1px solid #DDDDDD;
	border-bottom : 1px solid #DDDDDD;
	font-size : 140%;
	padding : .2em;
	font-weight: normal;
}

fieldset.brief textarea {
	font-size: 105%;
}

fieldset.brief input:focus {
	background-color: #FFFFCC;
}

fieldset.brief ol, fieldset.brief li {
	list-style-type : none;
}

fieldset.brief div.hint, fieldset.rows div.hint {
	color : #666666;
	font-size : 100%;
	margin : .4em;
}

h2 span.hint {
	font-size: 76%;
	font-weight : normal;
}
.thumbnail {
	border : 0;
	float : left;
	margin : 0pt 5px 5px 0pt;
}
a.cancel {
	padding-left : 1em;
}

.resultscontrol, .resultscontrol select {
	font-size: 90%;
}

.cartlist {
	margin-top : 5px;
}

.cartlist input.submit, #tagsel_button {
	background-color : #d8deb8;
	background-image : none;
	border-color : #bebf84;
	color : #333;
	font-size : 87%;
	padding : 2px 0;
	margin : 0 0 0 0;
}

#CheckAll, #CheckNone {
	font-weight : normal;
	margin : 0 .5em;
}

.resultscontrol label {
	font-weight : bold;
	margin-left : .5em;
}

.resort {
	float : right;
	margin-top : 5px;
}

.searchresults p.details {
	color : #979797;
}

.searchresults p {
	margin: 0;
	padding: 0;
	padding-top : .6em;
}

td.resultscontrol img {
	vertical-align: middle;
}

.searchresults table td {
}

.searchresults table {
	margin : 0;
}

.searchresults td, .searchresults th, .searchresults table {
	border: 0;
}
.searchresults td {
	vertical-align: top;
}

.searchresults tr {
	border-bottom : 1px solid #f3f3f3;
}

.searchresults tr:first-child {
	border : 0;
}

.searchresults table {
	border-top : 0px solid #CCCCCC;
	width : 100%;
}

.searchresults a.reserve, .searchresults a.reserve:visited {
	background-position:left top;
	background-repeat:no-repeat;
	float:right;
	padding:2px 3px 2px 26px;
}

.searchresults a.reserve {
	background-color:transparent;
	color:#006699;
}

.unavailable, .tagerror, .tagerror:visited {
	color: #990033;
}

#libraryname {
	float : left;
	line-height : 2em;
}

#corner {
	float : right;
	line-height : 2em;
}

.pages {
	line-height : 1.8em;
	text-align: center;
}
a:link.current {
	background-color: transparent;
	color: #3366CC;
	font-weight: bold;
	padding: 1px 5px 1px 5px;
	text-decoration: none;
}
a:visited.current {
	background-color: transparent;
	color: #3366CC;
	font-weight: bold;
	padding: 1px 5px 1px 5px;
	text-decoration: none;
}

a:hover.current {
	background-color: #CCFF00;
	color: #CC3333;
	font-weight: bold;
	padding: 1px 5px 1px 5px;
	text-decoration: none;
}

a:active.current {
	background-color: #99CC00;
	color: #FFFF99;
	font-weight: bold;
	padding: 1px 5px 1px 5px;
	text-decoration: none;
}

.current {
	background-color: #FFFFFF;
	color: #3366CC;
	font-weight: bold;
	padding: 1px 5px 1px 5px;
	text-decoration: none;
}

a:link.nav {
	background-color: #EEE;
	border: 1px solid #CCCC99;
	color: #3366CC;
	font-weight: bold;
	padding: 1px 5px 1px 5px;
	text-decoration: none;
}

a:visited.nav {
	background-color: #EEE;
	border: 1px solid #CCCC99;
	color: #3366CC;
	font-weight: bold;
	padding: 1px 5px 1px 5px;
	text-decoration: none;
}

a:hover.nav {
	background-color: #FFFFCC;
	border: 1px solid #CCCC99;
	color: #CC3333;
	font-weight: bold;
	padding: 1px 5px 1px 5px;
	text-decoration: none;
}

a:active.nav {
	background-color: #FFFFCC;
	border: 1px solid #CCCC99;
	color: #D25500;
	font-weight: bold;
	padding: 1px 5px 1px 5px;
	text-decoration: none;
}
/* ... */

